--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="http://127.0.0.1:5500/Chatbot.css">
+  <!-- <link rel="stylesheet" href="http://127.0.0.1:5501//Chatbot.css"> -->
   <link rel="stylesheet" href="index.css"> 
 </head>
 <body>
-    <script src="http://127.0.0.1:5500/Chatbot.js"></script>
+    <script src="http://127.0.0.1:5501//Chatbot.js"></script>
     <script>
       const apiLink="https://dummyjson.com/products/search?q="
       const uicolor='purple'
