--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
   <link rel="stylesheet" href="index.css"> 
 </head>
 <body>
-    <script src="http://127.0.0.1:5501//Chatbot.js"></script>
+    <script src="http://127.0.0.1:5501/Botsify/Chatbot.js"></script>
     <script>
       const apiLink="https://dummyjson.com/products/search?q="
       const uicolor='purple'
       const msgcolor='#F3CCF3'
       const textcolor = 'black'
-      const Chatbot = createChatbotApp(uicolor,msgcolor,textcolor,apiLink);
+      const audioLink='http://127.0.0.1:5501/Botsify/beep_beep_sms.mp3'
+      const iconLink='https://cdn-icons-png.flaticon.com/128/2983/2983788.png'
+      const Chatbot = createChatbotApp(uicolor,msgcolor,textcolor,apiLink,audioLink,iconLink);
       Chatbot.render()
     </script>
 </body>
