--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
       const textcolor = 'black'
       const audioLink='http://127.0.0.1:5501/Botsify/beep_beep_sms.mp3'
       const iconLink='https://cdn-icons-png.flaticon.com/128/2983/2983788.png'
-      const Chatbot = createChatbotApp(uicolor,msgcolor,textcolor,apiLink,audioLink,iconLink);
+      const chatBotName='BotsifY '
+      const chatBotIcon='🤖'
+      const floatingButtonIcon='💬'
+      const closeButtonIcon='✖'
+      const Chatbot = createChatbotApp(uicolor,msgcolor,textcolor,apiLink,audioLink,iconLink,chatBotName,chatBotIcon,floatingButtonIcon,closeButtonIcon);
       Chatbot.render()
     </script>
 </body>
